syntax = "proto3";

package note;

import "definitions/validate/Validate.proto";

option go_package = "github.com/yb2020/odoc/proto/gen/go/note";


// @api_path: /api/note/noteReadLocation/getLocation
// @method: POST
// @content-type: application/json
// @summary: 获取笔记阅读位置
message GetNoteReadLocationRequest {
  string noteId = 1 [(validate.rules).string = {min_len: 1}];
}

message GetNoteReadLocationResponse {
  string location = 1;
}

// @api_path: /api/note/noteReadLocation/record
// @method: POST
// @content-type: application/json
// @summary: 记录笔记阅读位置
message RecordNoteReadLocationRequest {
  string noteId = 1 [(validate.rules).string = {min_len: 1}];
  string location = 2;
}
